dist_man1_MANS=

if BUILD_BITMONKEYD
  dist_man1_MANS+=bitmonkeyd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitmonkey-qt.1
endif

if BUILD_BITMONKEY_CLI
  dist_man1_MANS+=bitmonkey-cli.1
endif

if BUILD_BITMONKEY_TX
  dist_man1_MANS+=bitmonkey-tx.1
endif

if ENABLE_WALLET
if BUILD_BITMONKEY_WALLET
  dist_man1_MANS+=bitmonkey-wallet.1
endif
endif
